doc: sdocumentation swagger family routers
